--- a/index.html
+++ b/index.html
@@ -89,5 +89,36 @@
 
       </ul>
     </section>
+
+    <section>
+      <h2>Comidas</h2>
+
+      <ul>
+        <li>
+          <div class="details">
+            <h3>Carnes</h3>
+            <p class="description">
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+          </div>
+          <strong class="price">
+            R$37.70
+          </strong>
+        </li>
+
+        <li>
+          <div class="details">
+            <h3>Lanches</h3>
+            <p class="description">
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+          </div>
+          <strong class="price">
+            R$17.70
+          </strong>
+        </li>
+
+      </ul>
+    </section>
   </body>
   </html>
